--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                  Voici donc un extrait explicatif concernant l’une des applications les plus populaires actuellement qui regroupe les critères de compatibilité géographique et physique, Tinder :
                 </p>
                 <video width="100%" height="100%" controls="">
-                    <source src="http://e101.cdn.m6web.fr/u/videonum/zoneinterdite/zoneinterdite__Amour-sexe-se__20140602__538c4a6e93e16_hq.mp4/423c606998fd712ca58b8a32d0ac0c40/5754e546">
+                    <source src="http://perso.telecom-paristech.fr/~yeramian/video/indexvideo.mp4">
                     </video>
                     
                 <p>
@@ -150,7 +150,22 @@
         </div>
       </div>
     </section>
+    <section id="prefootergrad">
+      </br>
+      </br>
+    </section>
+    <section id="footer">
 
+      <div class="wrap follow">
+        <p id="footerp">
+
+              Pour toutes informations complémentaires, veuillez nous contacter via l’adresse mail :<a href="mailto:etic3.2016@gmail.com">etic3.2016@gmail.com</a> .</br>
+              Vous pouvez également consulter le site officiel du projet ETIC pour l’année 2016 : <a href="http://ethique-tic.fr/2016/">http://ethique-tic.fr/2016/</a>
+              </p>
+      </div>
+      <small>Copyright 2016</small>
+ 
+    </section>
 
 
 
@@ -164,6 +179,7 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
+    <script src="js/dropdown.js"></script>
 
 </body>
 
