--- a/presse.html
+++ b/presse.html
@@ -252,6 +252,23 @@
 
   </div>
 </section>
+
+<section id="prefootergrad">
+      </br>
+      </br>
+    </section>
+    <section id="footer">
+
+      <div class="wrap follow">
+        <p id="footerp">
+
+              Pour toutes informations complémentaires, veuillez nous contacter via l’adresse mail :<a href="mailto:etic3.2016@gmail.com">etic3.2016@gmail.com</a> .</br>
+              Vous pouvez également consulter le site officiel du projet ETIC pour l’année 2016 : <a href="http://ethique-tic.fr/2016/">http://ethique-tic.fr/2016/</a>
+              </p>
+      </div>
+      <small>Copyright 2016</small>
+ 
+    </section>
     <!-- Main Content -->
    
     <!-- jQuery -->
